# generative-ai-actuarial-studies

./: .gitignore  Data description.ipynb  EDA+Diffusion.ipynb  EDA_swi.ipynb  README.md  data_preprocessing.ipynb  data_vis_swi.ipynb  fonction.py  gen_ai.ipynb  main.py  modelisation_gen_ai.ipynb  models_archi.py  pipeline_Diffusion.ipynb  preprocessing_cartes.ipynb  pyproject.toml  results.ipynb  visualisation_stats.ipynb
.claude/: settings.local.json
consignes/: climate_risk_indicators_notebook.ipynb  project.ipynb
data/maps/: land_mask.npy  mask_padded.npy  metadata.json
training_notebook/: train_cgan.ipynb  train_cvae.ipynb
