[project]
name = "generative-ai-actuarial-studies"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fidle>=2.3.2",
    "geopandas>=1.1.3",
    "pandas>=3.0.2",
    "rasterio>=1.5.0",
    "seaborn>=0.13.2",
    "torch>=2.11.0",
    "tqdm>=4.67.3",
    "xgboost>=3.2.0",
]
